@@ -25,7 +25,7 @@
 #include "op_sample_file.h"
 #include "op_events.h"
 #include "op_libiberty.h"
-#include "op_interface.h"
+#include "op_interface_25.h"
 #include "op_hw_config.h"
 
 #include <unistd.h>
